# can-io-firmware

./: .gitmodules  Cargo.toml  Embed.toml  README.md  build.rs  can_io.dbc  example_node_config.toml  memory.x  rust-toolchain.toml  zencan_config.toml
.cargo/: config.toml
app/: STM32G0B1.svd  memory.x
app/.cargo/: config.toml
app/src/: main.rs
src/: flash.rs  gpio.rs  main.rs  persist.rs
