[package]
name = "canio"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.4" }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
fdcan = { version = "0.2.1", features = ["fdcan_g0_g4_l5"] }
lilos = "1.3"
md5 = { version = "0.7.0", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
stm32-metapac = { version = "15.0.0", features = ["stm32g0b1cb", "rt"] }

zencan-node = { path = "../zencan/zencan-node", default-features = false}

[build-dependencies]
zencan-build = { path = "../zencan/zencan-build" }

[profile.dev]
codegen-units = 1       # better optimizations
debug = true
lto = true              # better optimizations
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
overflow-checks = true